syntax = "proto3";
package org.example.protobuf.proto;

option java_package = "org.example.protobuf.proto";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;

// 服务接口，定义请求参数和响应结果
service HelloWorldService {
  // API
  rpc sayHello(HelloRequest) returns (HelloResponse) {
  }
}

// 定义请求体
message HelloRequest {
  string name = 1;
}

// 定义响应体
message HelloResponse {
  string message = 1;
}